Revert "adding frontend folder"
This reverts commit 788276e04cd633bceed81f2ba5a459770ecd3b47.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "hackernews-clone",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -23,4 +23,3 @@
     "jest": "^24.8.0"
   }
 }
-S
