--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.3.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.0",
     "graphql-yoga": "^1.17.4",
+    "jest": "24.7.1",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^1.32.2",
     "prisma-client-lib": "^1.30.4",
-    "jest": "24.7.1"
+    "react-apollo": "^2.5.5"
   }
 }
