--- a/server/prisma/prisma.yml
+++ b/server/prisma/prisma.yml
@@ -1,9 +1,15 @@
-#endpoint: ''
-endpoint: https://eu1.prisma.sh/maudy-1326b5/hackernews-clone/dev
+# Specifies the HTTP endpoint of your Prisma API.
+endpoint: ''
 
+# Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
 
+# Specifies the language and directory for the generated Prisma client.
 generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client
-    
+
+# Ensures Prisma client is re-generated after a datamodel change.
+hooks:
+  post-deploy:
+    - prisma generate
