--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "graphql-yoga": "^1.17.4",
     "jest": "24.7.1",
     "jsonwebtoken": "^8.5.1",
-    "prisma": "^1.32.2",
+    "prisma": "^1.33.0",
     "prisma-client-lib": "^1.30.4",
-    "react-apollo": "^2.5.5"
+    "react-apollo": "^2.5.5",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0"
   }
 }
