--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.3.1",
+    "apollo-link-context": "^1.0.17",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
