--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-boost": "^0.3.1",
     "apollo-link-context": "^1.0.17",
+    "apollo-link-ws": "^1.0.17",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-graphql": "^0.8.0",
@@ -23,6 +24,7 @@
     "prisma-client-lib": "^1.30.4",
     "react-apollo": "^2.5.5",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "subscriptions-transport-ws": "^0.9.16"
   }
 }
